// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Workflows>
  <div>
    <WorkflowListNavBar>
      <div>
        <nav
          className="navbar"
        >
          <h1
            className="navbar-brand mb-0 mr-auto"
          >
            CJ Workbench
          </h1>
          <WorkflowHamburgerMenu
            workflowsPage={true}
          >
            <UncontrolledDropdown>
              <Dropdown
                isOpen={false}
                tag="div"
                toggle={[Function]}
              >
                <div
                  className="dropdown"
                >
                  <DropdownToggle
                    aria-haspopup={true}
                    color="secondary"
                    data-toggle="dropdown"
                  >
                    <Button
                      aria-expanded={false}
                      aria-haspopup="true"
                      className=""
                      color="secondary"
                      data-toggle="dropdown"
                      onClick={[Function]}
                      tag="button"
                    >
                      <button
                        aria-expanded={false}
                        aria-haspopup="true"
                        className="btn btn-secondary"
                        data-toggle="dropdown"
                        onClick={[Function]}
                        type="button"
                      >
                        ☰
                      </button>
                    </Button>
                  </DropdownToggle>
                  <DropdownMenu
                    right={true}
                    tag="div"
                  >
                    <div
                      aria-hidden={true}
                      className="dropdown-menu dropdown-menu-right"
                      role="menu"
                      tabIndex="-1"
                    >
                      <DropdownItem
                        href="http://blog.cjworkbench.org"
                        tag="a"
                        toggle={true}
                      >
                        <a
                          className="dropdown-item"
                          href="http://blog.cjworkbench.org"
                          onClick={[Function]}
                          tabIndex="0"
                        >
                           Help 
                        </a>
                      </DropdownItem>
                      <DropdownItem
                        href="/logout"
                        tag="a"
                        toggle={true}
                      >
                        <a
                          className="dropdown-item"
                          href="/logout"
                          onClick={[Function]}
                          tabIndex="0"
                        >
                           Logout 
                        </a>
                      </DropdownItem>
                    </div>
                  </DropdownMenu>
                </div>
              </Dropdown>
            </UncontrolledDropdown>
          </WorkflowHamburgerMenu>
        </nav>
      </div>
    </WorkflowListNavBar>
    <div
      className="container workflows-container"
    >
      <div
        className="row justify-content-md-center"
      >
        <div
          className="col col-lg-2"
        />
        <div
          className="col-12 col-md-auto"
        >
          <div
            className="input-group"
          >
            <span
              className="input-group-btn"
            >
              <button
                className="new-workflow-button btn btn-secondary"
                onClick={[Function]}
              >
                New
              </button>
            </span>
          </div>
        </div>
        <div
          className="col col-lg-2"
        />
      </div>
      <div
        className="card w-75 mx-auto workflows-list"
      >
        <div
          className="card-block"
        >
          <h3
            className="card-title "
          >
            Workflows
          </h3>
          <div
            className=""
          />
        </div>
      </div>
    </div>
  </div>
</Workflows>
`;

exports[`renders correctly 2`] = `
<Workflows>
  <div>
    <WorkflowListNavBar>
      <div>
        <nav
          className="navbar"
        >
          <h1
            className="navbar-brand mb-0 mr-auto"
          >
            CJ Workbench
          </h1>
          <WorkflowHamburgerMenu
            workflowsPage={true}
          >
            <UncontrolledDropdown>
              <Dropdown
                isOpen={false}
                tag="div"
                toggle={[Function]}
              >
                <div
                  className="dropdown"
                >
                  <DropdownToggle
                    aria-haspopup={true}
                    color="secondary"
                    data-toggle="dropdown"
                  >
                    <Button
                      aria-expanded={false}
                      aria-haspopup="true"
                      className=""
                      color="secondary"
                      data-toggle="dropdown"
                      onClick={[Function]}
                      tag="button"
                    >
                      <button
                        aria-expanded={false}
                        aria-haspopup="true"
                        className="btn btn-secondary"
                        data-toggle="dropdown"
                        onClick={[Function]}
                        type="button"
                      >
                        ☰
                      </button>
                    </Button>
                  </DropdownToggle>
                  <DropdownMenu
                    right={true}
                    tag="div"
                  >
                    <div
                      aria-hidden={true}
                      className="dropdown-menu dropdown-menu-right"
                      role="menu"
                      tabIndex="-1"
                    >
                      <DropdownItem
                        href="http://blog.cjworkbench.org"
                        tag="a"
                        toggle={true}
                      >
                        <a
                          className="dropdown-item"
                          href="http://blog.cjworkbench.org"
                          onClick={[Function]}
                          tabIndex="0"
                        >
                           Help 
                        </a>
                      </DropdownItem>
                      <DropdownItem
                        href="/logout"
                        tag="a"
                        toggle={true}
                      >
                        <a
                          className="dropdown-item"
                          href="/logout"
                          onClick={[Function]}
                          tabIndex="0"
                        >
                           Logout 
                        </a>
                      </DropdownItem>
                    </div>
                  </DropdownMenu>
                </div>
              </Dropdown>
            </UncontrolledDropdown>
          </WorkflowHamburgerMenu>
        </nav>
      </div>
    </WorkflowListNavBar>
    <div
      className="container workflows-container"
    >
      <div
        className="row justify-content-md-center"
      >
        <div
          className="col col-lg-2"
        />
        <div
          className="col-12 col-md-auto"
        >
          <div
            className="input-group"
          >
            <span
              className="input-group-btn"
            >
              <button
                className="new-workflow-button btn btn-secondary"
                onClick={[Function]}
              >
                New
              </button>
            </span>
          </div>
        </div>
        <div
          className="col col-lg-2"
        />
      </div>
      <div
        className="card w-75 mx-auto workflows-list"
      >
        <div
          className="card-block"
        >
          <h3
            className="card-title "
          >
            Workflows
          </h3>
          <div
            className=""
          >
            <div
              className="card card-block item-test-class workflow-in-list"
            >
              <a
                href="/workflows/1"
              >
                <div
                  className="d-flex justify-content-between"
                >
                  <span>
                    Charting
                  </span>
                  <div
                    className="menu-test-class"
                    onClick={[Function]}
                  >
                    <WorkflowContextMenu
                      deleteWorkflow={[Function]}
                    >
                      <UncontrolledDropdown>
                        <Dropdown
                          isOpen={false}
                          tag="div"
                          toggle={[Function]}
                        >
                          <div
                            className="dropdown"
                          >
                            <DropdownToggle
                              aria-haspopup={true}
                              color="secondary"
                              data-toggle="dropdown"
                            >
                              <Button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className=""
                                color="secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                tag="button"
                              >
                                <button
                                  aria-expanded={false}
                                  aria-haspopup="true"
                                  className="btn btn-secondary"
                                  data-toggle="dropdown"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  ⋮
                                </button>
                              </Button>
                            </DropdownToggle>
                            <DropdownMenu
                              right={true}
                              tag="div"
                            >
                              <div
                                aria-hidden={true}
                                className="dropdown-menu dropdown-menu-right"
                                role="menu"
                                tabIndex="-1"
                              >
                                <DropdownItem
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    Delete
                                  </button>
                                </DropdownItem>
                              </div>
                            </DropdownMenu>
                          </div>
                        </Dropdown>
                      </UncontrolledDropdown>
                    </WorkflowContextMenu>
                  </div>
                </div>
              </a>
            </div>
            <div
              className="card card-block item-test-class workflow-in-list"
            >
              <a
                href="/workflows/7"
              >
                <div
                  className="d-flex justify-content-between"
                >
                  <span>
                    Messy data cleanup
                  </span>
                  <div
                    className="menu-test-class"
                    onClick={[Function]}
                  >
                    <WorkflowContextMenu
                      deleteWorkflow={[Function]}
                    >
                      <UncontrolledDropdown>
                        <Dropdown
                          isOpen={false}
                          tag="div"
                          toggle={[Function]}
                        >
                          <div
                            className="dropdown"
                          >
                            <DropdownToggle
                              aria-haspopup={true}
                              color="secondary"
                              data-toggle="dropdown"
                            >
                              <Button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className=""
                                color="secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                tag="button"
                              >
                                <button
                                  aria-expanded={false}
                                  aria-haspopup="true"
                                  className="btn btn-secondary"
                                  data-toggle="dropdown"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  ⋮
                                </button>
                              </Button>
                            </DropdownToggle>
                            <DropdownMenu
                              right={true}
                              tag="div"
                            >
                              <div
                                aria-hidden={true}
                                className="dropdown-menu dropdown-menu-right"
                                role="menu"
                                tabIndex="-1"
                              >
                                <DropdownItem
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    Delete
                                  </button>
                                </DropdownItem>
                              </div>
                            </DropdownMenu>
                          </div>
                        </Dropdown>
                      </UncontrolledDropdown>
                    </WorkflowContextMenu>
                  </div>
                </div>
              </a>
            </div>
            <div
              className="card card-block item-test-class workflow-in-list"
            >
              <a
                href="/workflows/8"
              >
                <div
                  className="d-flex justify-content-between"
                >
                  <span>
                    Document search
                  </span>
                  <div
                    className="menu-test-class"
                    onClick={[Function]}
                  >
                    <WorkflowContextMenu
                      deleteWorkflow={[Function]}
                    >
                      <UncontrolledDropdown>
                        <Dropdown
                          isOpen={false}
                          tag="div"
                          toggle={[Function]}
                        >
                          <div
                            className="dropdown"
                          >
                            <DropdownToggle
                              aria-haspopup={true}
                              color="secondary"
                              data-toggle="dropdown"
                            >
                              <Button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className=""
                                color="secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                tag="button"
                              >
                                <button
                                  aria-expanded={false}
                                  aria-haspopup="true"
                                  className="btn btn-secondary"
                                  data-toggle="dropdown"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  ⋮
                                </button>
                              </Button>
                            </DropdownToggle>
                            <DropdownMenu
                              right={true}
                              tag="div"
                            >
                              <div
                                aria-hidden={true}
                                className="dropdown-menu dropdown-menu-right"
                                role="menu"
                                tabIndex="-1"
                              >
                                <DropdownItem
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    Delete
                                  </button>
                                </DropdownItem>
                              </div>
                            </DropdownMenu>
                          </div>
                        </Dropdown>
                      </UncontrolledDropdown>
                    </WorkflowContextMenu>
                  </div>
                </div>
              </a>
            </div>
            <div
              className="card card-block item-test-class workflow-in-list"
            >
              <a
                href="/workflows/9"
              >
                <div
                  className="d-flex justify-content-between"
                >
                  <span>
                    Visualization
                  </span>
                  <div
                    className="menu-test-class"
                    onClick={[Function]}
                  >
                    <WorkflowContextMenu
                      deleteWorkflow={[Function]}
                    >
                      <UncontrolledDropdown>
                        <Dropdown
                          isOpen={false}
                          tag="div"
                          toggle={[Function]}
                        >
                          <div
                            className="dropdown"
                          >
                            <DropdownToggle
                              aria-haspopup={true}
                              color="secondary"
                              data-toggle="dropdown"
                            >
                              <Button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className=""
                                color="secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                tag="button"
                              >
                                <button
                                  aria-expanded={false}
                                  aria-haspopup="true"
                                  className="btn btn-secondary"
                                  data-toggle="dropdown"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  ⋮
                                </button>
                              </Button>
                            </DropdownToggle>
                            <DropdownMenu
                              right={true}
                              tag="div"
                            >
                              <div
                                aria-hidden={true}
                                className="dropdown-menu dropdown-menu-right"
                                role="menu"
                                tabIndex="-1"
                              >
                                <DropdownItem
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    Delete
                                  </button>
                                </DropdownItem>
                              </div>
                            </DropdownMenu>
                          </div>
                        </Dropdown>
                      </UncontrolledDropdown>
                    </WorkflowContextMenu>
                  </div>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</Workflows>
`;
